<resources>
    <string name="app_name">Tic Tac Tao</string>
    <string name="heading">Welcome to Tic-Tac-Tao</string>
    <string name="grid">Our main grid</string>
    <string name="zero">zero</string>
    <string name="one">one</string>
    <string name="two">two</string>
    <string name="three">three</string>
    <string name="four">four</string>
    <string name="five">five</string>
    <string name="six">six</string>
    <string name="seven">seven</string>
    <string name="eignt">eight</string>
    <string name="Restart">Restart</string>


</resources>